---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": { "enabled": false },
  "linter": { "enabled": false },
  "files": { "ignore": ["test2.js", "test.js"] },
  "organizeImports": { "include": ["test.js"] }
}
```

## `test.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";
```

## `test2.js`

```js
import * as something from "../something";
import { lorem, foom, bar } from "foo";
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


